init: add MONGO_DB_URI
Signed-off-by: baalajimaestro <baalajimaestro@computer4u.com>

--- a/sample_config.env
+++ b/sample_config.env
@@ -73,7 +73,7 @@ ALIVE_NAME = None
 # Your Database URL
 # Example: 'postgres://userbot:userbot@localhost:5432/userbot'
 #
-DATABASE_URL = ""
+MONGO_DB_URL=
 
 #
 # YouTube Data API Key for .yt command
