Rework commands to MongoDB & Redis (#124)
* modules: admin: Fixes for mongo

Signed-off-by: pqhaz <usaguy1342@gmail.com>

* modules: scrapers: Report about changed lang

.. Without dependency of log enabled.

Signed-off-by: pqhaz <usaguy1342@gmail.com>

* modules: admin: Fixes, refactores

Also lint code.

Signed-off-by: pqhaz <usaguy1342@gmail.com>

* modules: filter: Fixes for mongo

Also lint code in dbhelper

Signed-off-by: pqhaz <usaguy1342@gmail.com>

* modules: purge: Await for sleep

Signed-off-by: pqhaz <usaguy1342@gmail.com>

* modules: filter, notes: Fixes for mongo

Filters: Fix filter update, rework a bit add command
Notes: Rework to mongo, add note command, lint code.

Signed-off-by: pqhaz <usaguy1342@gmail.com>

* modules: pmpermit, afk: Fixes for mongo

Signed-off-by: pqhaz <usaguy1342@gmail.com>

* sample_config: Update DB link example

Signed-off-by: pqhaz <usaguy1342@gmail.com>

* requrements: Include dnspython

... Also sync docker requirements
Thanks to jeepeo

Signed-off-by: pqhaz <usaguy1342@gmail.com>

--- a/sample_config.env
+++ b/sample_config.env
@@ -71,7 +71,7 @@ ALIVE_NAME = None
 
 #
 # Your Database URL
-# Example: 'postgres://userbot:userbot@localhost:5432/userbot'
+# Example: 'localhost'
 #
 MONGO_DB_URL=
 
