--- a/requirementsDOCKER.txt
+++ b/requirementsDOCKER.txt
@@ -1,39 +1,28 @@
+Pillow>=5.3.0
 aiohttp
-async_generator
-bs4
 cowpy
-cryptg
-dnspython
 emoji
+gTTS-token>=1.1.3
+gTTS>=2.0.1
 gitpython
 google-api-python-client
-google-auth-oauthlib
-googletrans>=2.4.0
+google_auth_oauthlib
 google_images_download>=2.7.1
-gTTS>=2.0.1
-gTTS-token>=1.1.3
+googletrans>=2.4.0
+gsearch>=1.6.0
+gtts>=2.0.1
 hachoir
-httplib2
-humanize
-lxml
-oauth2client
-Pillow>=5.3.0
-psycopg2
 psycopg2-binary
 pybase64>=0.4.0
-pylast
-pySmartDL
-python-barcode
 python-dotenv
-pytube>=9.5.1
+pytube
 pytz
-qrcode
 requests>=2.18.4
-search-engine-parser
 speedtest-cli>=2.0.2
-sqlalchemy>=1.2
-telethon>=1.9
+spongemock
+telegraph
 telethon-session-sqlalchemy>=0.2.6
+telethon>=1.6.2
 urbandict>=0.5
 wikipedia>=1.4.0
 zalgo_text>=0.6
